--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,40 @@
   <name>AutomationFramework</name>
   <url>http://maven.apache.org</url>
 
-  <properties>
+  <!-- <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
  <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
- 
+  </properties> -->
+ <build>
+    <!-- <sourceDirectory>src</sourceDirectory> -->
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.3</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.21.0</version>
+    <configuration>
+    <suiteXmlFiles>
+    <suiteXmlFile>test.xml</suiteXmlFile>
+    </suiteXmlFiles>
+   <configuration>
+   <skipTests>false</skipTests>
+   <testFailureIgnore>true</testFailureIgnore>
+   <forkmode>once</forkmode>
+   </configuration>
+    </configuration>
+      </plugin>
+    </plugins>
+  </build>
  
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java --> 
