--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     <version>2.21.0</version>
     <configuration>
     <suiteXmlFiles>
-    <suiteXmlFile>test.xml</suiteXmlFile>
+    <suiteXmlFile>testng.xml</suiteXmlFile>
     </suiteXmlFiles>
    <configuration>
    <skipTests>false</skipTests>
