--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,10 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
+         <source>${jdk.version}</source>
+          <target>${jdk.version}</target>
+          <encoding>${project.build.sourceEncoding}</encoding>
+          </configuration>
       </plugin>
       
       <plugin>
