--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
   </build>
  
   <dependencies>
+  <dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>javax.servlet-api</artifactId>
+    <version>3.0.1</version>
+</dependency>
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java --> 
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
