--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
   <name>AutomationFramework</name>
   <url>http://maven.apache.org</url>
 
-  <!-- <properties>
+  <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
  <maven.compiler.target>1.8</maven.compiler.target>
-  </properties> -->
+  </properties>
  <build>
     <!-- <sourceDirectory>src</sourceDirectory> -->
     <plugins>
