--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
-         <source>${jdk.version}</source>
-          <target>${jdk.version}</target>
-          <encoding>${project.build.sourceEncoding}</encoding>
+         <source>1.6</source>
+          <target>1.6</target>
+          <!-- <encoding>${project.build.sourceEncoding}</encoding> -->
           </configuration>
       </plugin>
       
