--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
  
   <dependencies>
   <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.9.13.6</version>
+            <scope>compile</scope>
+</dependency>
+  <dependency>
     <groupId>javax.servlet</groupId>
     <artifactId>javax.servlet-api</artifactId>
     <version>3.0.1</version>
