--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,13 @@
   <version>2.21.0</version>
   <type>maven-plugin</type>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-htmlunit-driver -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-htmlunit-driver</artifactId>
+    <version>2.52.0</version>
+</dependency>
+
 
   </dependencies>
 </project>
